# trgm-tsk

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ReadMe.md  make.ps1  make.sh
docker-tests/: docker-compose.yml
docker-tests/gcc-cmake-valgrind/: Dockerfile
example/: CMakeLists.txt  main.cpp
src/: Example.cpp  SimpleString.cpp  SimpleString.h  SimpleString.hpp  SimpleStringComparator.hpp  Str.cpp  Str.hpp  StrBuffer.cpp  StrBuffer.hpp  StrComparator.hpp  StringBuffer.hpp  TestFramework.hpp  Tests.cpp
string/: CMakeLists.txt  String.cpp  String.hpp  StringAlgo.cpp  StringAlgo.hpp  StringBuffer.cpp  StringBuffer.hpp
tests/: CMakeLists.txt  Entry.cpp  SimpleStringComparatorTests.cpp  SimpleStringTests.cpp  StrBufferTests.cpp  StrComparatorTests.cpp  StrTests.cpp  StringBufferTests.cpp  StringComparatorTests.cpp  StringTests.cpp  TestFramework.cpp  TestFramework.hpp  main.cpp
